# timer-cpp

./: README.md  Timer.h
test/: CMakeLists.txt  main.cpp
